--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -6,7 +6,7 @@
             android:id="@+id/app_bar_search"
             android:icon="@drawable/ic_search_white"
             android:title="@string/item_search_view_hint"
-            app:actionViewClass="android.support.v7.widget.SearchView"
+            app:actionViewClass="androidx.appcompat.widget.SearchView"
             app:queryHint="@string/item_search_view_hint"
             app:showAsAction="ifRoom|collapseActionView"/>
     <!--app:iconifiedByDefault="false"-->
